objects/JBCXM__ScorecardHistory__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scorecard History</relationshipLabel>
        <relationshipName>Scorecard_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__LogDate__c</fullName>
        <label>Log Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__Metric__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scorecard Metric</label>
        <referenceTo>JBCXM__ScorecardMetric__c</referenceTo>
        <relationshipLabel>Scorecard History</relationshipLabel>
        <relationshipName>Scorecard_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ScoreId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Score Id</label>
        <referenceTo>JBCXM__ScoringSchemeDefinition__c</referenceTo>
        <relationshipLabel>Scorecard History</relationshipLabel>
        <relationshipName>ScorecardHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Snapshot__c</fullName>
        <label>Snapshot</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Scorecard_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Scorecard History</label>
    <nameField>
        <displayFormat>SCH-{0000}</displayFormat>
        <label>Scorecard History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecard History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>